2007-10-21 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DisplayTabs/_EmbeddedList.py: during rebuild, don't do select change
	* src/DisplayTabs/_NoteTab.py: connect db note changes so tab updates
	* src/DisplayTabs/_ButtonTab.py: avoid double call of selection_change
	* src/DisplayTabs/_GrampsTab.py: method to add db connects, and set connects
	* src/Editors/_EditPrimary.py: on add tab pass db connection method
	* src/Editors/_EditSecondary.py: on add tab pass db connection method
	* src/Editors/_EditReference.py: on add tab pass db connection method

2007-10-21 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Editors/_EditPerson.py: If a family changes, rebuild family backref of all 
	open editors. issue #1309, causing corrupt database.
	Also remove unneeded associations rebuild when family changes

2007-10-20  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_BareReportDialog.py:
	* src/plugins/WebCal.py:
	* src/plugins/NarrativeWeb.py:
	* src/plugins/FamilyLines.py:
	* src/ReportBase/_ReportDialog.py:
	Remove unused funtions setup_output_notebook and setup_post_process from
	the ReportDialog class.

2007-10-20  Brian Matherly <brian@gramps-project.org>
	* src/plugins/BookReport.py: Get book report working again.
	* src/plugins/SimpleBookTitle.py: Get title page working again.

2007-10-20  Gary Burton  <gary.burton@zen.co.uk>
	* src/plugins/NarrativeWeb.py: display event reference notes and attributes

2007-10-20  Benny Malengier  <benny.malengier@gramps-project.org>
	* src/gramps_main.py: if error and terminate, don't show family manager before exit
	* src/gramps.py: terminate if wrong python version

2007-10-20  Benny Malengier  <benny.malengier@gramps-project.org>
	* src/gramps_main.py: terminate if wrong python version

2007-10-20  Benny Malengier  <benny.malengier@gramps-project.org>
	* src/DisplayTabs/_BackRefModel.py: allow repository in backref (backref of note)